--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\JRubin\\AppData\\Local\\Continuum\\anaconda3\\python.exe"
+    "python.pythonPath": "/Users/jesserubin/anaconda3/bin/python"
 }
