--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.pythonPath": "/Users/jesserubin/miniconda3/bin/python3"
+    "python.pythonPath": "C:\\Users\\jesse\\Miniconda3\\python.exe",
+    "editor.rulers": [
+        79,
+        120
+    ],
+    //Python linting
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.formatting.provider": "autopep8",
+    "editor.formatOnSave": true
 }
