--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
     "python.formatting.provider": "autopep8",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "code-runner.runInTerminal": true
 }
