ack saves from work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\jesse\\Miniconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\JRubin\\AppData\\Local\\Continuum\\anaconda3\\python.exe",
     "editor.rulers": [
         79,
         120
