--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# pyEuler .gitignore
+
+# folders
 /.idea/**
 /.vscode/**
 /__pycache__/**
 /done/.idea/**
 /not_done/.idea/**
+
+# file types
+*.pyc
