--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 # folders
 /.idea/**
 /.vscode/**
-/__pycache__/**
+__pycache__/**
+lib/__pycache__/**
 /done/.idea/**
 /not_done/.idea/**
 
 # file types
 *.pyc
+*.json
